# django

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
apps/auth/: urls.py
apps/users/: apps.py  models.py  serializers.py  views.py  viewsets.py
apps/users/migrations/: 0001_initial.py
config/: api_router.py  settings.py  urls.py
tests/: test_django_sample.py
